styles nav in css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
     <script src="scripts/main.js" defer></script>
 </head>
 <body>
-    <h1>Strona działa</h1>
-    <nav class="main-nav"></nav>
+    <nav class="main-nav">
+        <div class="logo__container logo-left">
+            <img src="assets/images/znak_zosp_mini.png" alt="">
+        </div>
+        <ul class="nav__elements">
+            <li class="nav__element"><a href="#">Aktualności</a></li>
+            <li class="nav__element"><a href="#">Komisja</a></li>
+            <li class="nav__element"><a href="#">Dokumenty</a></li>
+            <li class="nav__element"><a href="#">Kontakt</a></li>
+        </ul>
+        <div class="logo__container logo-right">
+            <img src="assets/images/MDP_logo_mini.png" alt="">
+        </div>
+    </nav>
+    
 </body>
 </html>
