added header section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <img src="assets/images/MDP_logo_mini.png" alt="">
         </div>
     </nav>
-    
+    <header class="header">
+        <h1>Komisja ds Młodzieży przy ZP ZOSP w Ostródzie</h1>
+    </header>
 </body>
 </html>
