added elements to header

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     </nav>
     <header class="header">
         <h1>Komisja ds Młodzieży przy ZP ZOSP w Ostródzie</h1>
+        <div class="btns__container">
+            <button class="btn--news btn__header">Aktualności</button>
+            <button class="btn--contact btn__header">kontakt</button>
+        </div>
     </header>
 </body>
 </html>
